--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ a:active {
     border: none;
     border-radius: 50px;
     color: black;
-    transition: 0.5s ease-in-out;
+    transition: 0.5s ease;
 }
 
 .active {
