--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ html, body {
     padding: 0;
     background-color: #FDE8D3;
     box-sizing: border-box;
+    font-family: 'Fredoka', sans-serif;
+    font-size: 20px;
 }
 
 li, a, button {
@@ -34,7 +36,6 @@ a:active {
     padding: 20px 30px;
     border: none;
     border-radius: 50px;
-    color: black;
     transition: 0.5s ease;
 }
 
@@ -43,7 +44,6 @@ a:active {
     padding: 20px 30px;
     border: none;
     border-radius: 50px;
-    color: black;
 }
 
 .nav_links {
@@ -56,7 +56,7 @@ a:active {
 }
 
 .nav_links li a {
-    color: black;
+    color: white;
 }
 
 .nav_links li a:hover {
@@ -67,3 +67,137 @@ a:active {
     transition: all 0.3s ease 0s;
 }
 
+.photo {
+    height: 750px;
+    float: right;
+    position: relative;
+}
+
+.main_title{
+    margin-left: 112px;
+    margin-top: 102px;
+    font-size: 96px;
+}
+
+.main_text {
+    margin-top: 8px;
+    margin-left: 112px;
+    width: 400px;
+    position: absolute;
+}
+
+.empty {
+    background-color: #657166;
+    height: 256px;
+    width: 100%;
+    margin-top: 356px;
+}
+
+.acent {
+    font-size: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h3 {
+    padding-bottom: 24px;
+    margin: 0;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 64px;
+}
+
+.cont {
+    background-color: white;
+    width: 288px;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.top_img {
+    width: 230px;
+    height: 230px;
+    padding: 24px;
+}
+
+button {
+    background-color: #99CDD8;
+    border: none;
+    border-radius: 50px;
+    width: 184px;
+    height: 48px;
+    margin-bottom: 24px;
+    transition: transform 0.5s;
+    font-family: 'Fredoka', sans-serif;
+    font-size: 16px;
+}
+
+button:hover {
+    transform: scale(1.1);
+}
+
+.facts {
+    margin-top: 24px;
+    padding: 12px;
+    background-color: #657166;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.facts ul {
+    position: relative;
+    background-color: white;
+    color: black;
+    padding: 24px;
+}
+
+.facts ul li {
+    list-style: none;
+    box-shadow: 0 5px 25px rgba(0, 0, 0, .1);
+    transition: transform 0.5s;
+    padding: 5px;
+}
+
+.facts ul li span {
+    height: 20px;
+    width: 20px;
+    background: #657166;
+    color: black;
+    text-align: center;
+    line-height: 20px;
+    display: inline-block;
+    padding: 5px;
+    margin: 5px;
+    margin-right: 15px;
+}
+
+.cont_text {
+    width: 200px;
+    padding-top: 0;
+    margin-top: 0;
+    text-align: center;
+}
+
+footer {
+    display: flex;
+    background-color: #657166;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 40px;
+    margin-top: 36px;
+}
+
+.medias {
+    width: 40px;
+}
