--- a/styles.css
+++ b/styles.css
@@ -7,22 +7,8 @@ html, body {
     padding: 0;
     background-color: #FDE8D3;
     box-sizing: border-box;
-    font-size: 2vh; 
+    font-size: 1.5em; 
     row-gap: 1vh;
-}
-
-@media only screen and (max-width: 600px) {
-    html, body {
-        font-size: 3vw; 
-        row-gap: 1vw;
-    }
-}
-
-@media only screen and (max-width: 400px) {
-    html, body {
-        font-size: 4vw;
-        row-gap: 2vw;
-    }
 }
 
 li, a, button {
@@ -34,7 +20,7 @@ header {
     background-color: #657166;
     justify-content: space-between;
     align-items: center;
-    padding: 5vh 6.67vw;
+    padding: 3vh 4vw;
     margin: 0;
 }
 
@@ -47,12 +33,12 @@ header {
     width: 100%;
     height: 10vh;
     line-height: 10vh;
-    padding: 0 4vw;
+    padding: 0 2vw;
 }
 
 a:active {
     background-color: #99CDD8;
-    padding: 2.67vh 4vw;
+    padding: 2vh 4vw;
     border: none;
     border-radius: 5vh;
     transition: 0.5s ease;
@@ -60,7 +46,7 @@ a:active {
 
 .active {
     background-color: #99CDD8;
-    padding: 2.67vh 4vw;
+    padding: 2vh 4vw;
     border: none;
     border-radius: 5vh;
 }
@@ -71,7 +57,8 @@ a:active {
 
 .nav_links li {
     display: inline-block;
-    padding: 0 2.67vw;
+    padding: 0 2vw;
+    font-size: 1em;
 }
 
 .nav_links li a {
@@ -92,7 +79,7 @@ footer {
     justify-content: space-between;
     align-items: center;
     padding: 4vh 5vw; 
-    margin-top: 5.4vh; 
+    margin-top: 5vh; 
 }
 
 .medias {
@@ -102,23 +89,25 @@ footer {
 
 /* --- HOME PAGE --- */
 .photo {
-    height: 75vh;
+    height: 80vh;
     float: right;
     position: relative;
 }
 
 .main_title {
-    margin-left: 13vw;
+    margin-left: 10vw;
     margin-top: 12vh;
-    font-size: 10vw; 
+    margin-bottom: 0;
+    font-size: 3em; 
 }
 
 .main_text {
     margin-top: 5vh;
-    margin-left: 13vw;
+    margin-left: 10vw;
     margin-bottom: 1vh;
     width: 40vw;
     position: absolute;
+    font-size: 0.8em;
 }
 
 .empty {
@@ -129,14 +118,14 @@ footer {
 }
 
 .acent {
-    font-size: 3vw;
+    font-size: 1.5em;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 h3 {
-    font-size: 2vw;
+    font-size: 1em;
     color: black;
     font-style: italic;
     margin: 0;
@@ -155,26 +144,16 @@ h3 {
 
 .cont {
     background-color: white;
-    width: 28vw;
+    width: 26vw;
     flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-@media screen and (max-width: 1200px) {
-    .container {
-        flex-direction: column;
-        padding: 2vh 5vw;
-    }
-
-    .cont {
-        width: 50vw;
-    }
-}
 .top_img {
-    width: 23vw;
-    height: 23vw;
+    width: 20vw;
+    height: 20vw;
     padding: 2vh;
 }
 
@@ -183,11 +162,11 @@ button {
     border: none;
     border-radius: 5vh;
     width: 20vw;
-    height: 5vh;
+    height: 9vh;
     margin-bottom: 2.4vh;
     transition: transform 0.5s;
     font-family: 'Fredoka', sans-serif;
-    font-size: 1.6vw;
+    font-size: 1em;
 }
 
 button:hover {
@@ -209,30 +188,32 @@ button:hover {
     position: relative;
     background-color: white;
     color: black;
-    padding: 2.4vh;
+    padding: 3vh;
 }
 
 .facts ul li {
     list-style: none;
     box-shadow: 0 0.5vh 3vh rgba(0, 0, 0, .1);
-    padding: 0.5vh;
+    padding: 1vh;
+    font-size: 0.5em;
 }
 
 .facts ul li span {
-    height: 2.5vh; 
-    width: 2.5vh;
+    height: 3vh; 
+    width: 3vh;
     background: #657166;
     color: black;
     text-align: center;
     line-height: 2.5vh; 
     display: inline-block;
-    padding: 0.6vh; 
-    margin: 0.6vh;
+    padding: 1vh; 
+    margin: 1vh;
     margin-right: 2.5vw;
 }
 
 .cont_text {
-    width: 20vw;
+    width: 14vw;
+    font-size: 0.5em;
     padding-top: 0;
     margin-top: 0;
     text-align: center;
@@ -240,18 +221,20 @@ button:hover {
 
 /* --- ABOUT PAGE --- */
 .main_subtitle {
-    font-size: 11vw;
+    font-size: 3em;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 12.8vh;
+    margin-bottom: 0;
 }
 
 .main_text_about {
     width: 50vw;
     text-align: center;
-    padding-left: 42vw;
+    padding-left: 20vw;
     margin-bottom: 12.8vh;
+    font-size: 0.5em;
 }
 
 .missions {
@@ -271,6 +254,7 @@ button:hover {
 
 .missions ol li {
     padding: 1.33vh;
+    font-size: 1em;
 }
 
 .team_table {
@@ -286,7 +270,7 @@ button:hover {
 }
 
 .head_name {
-    font-size: 4.8vw;
+    font-size: 1em;
     text-align: center;
     background-color: #FDE8D3;
 }
@@ -297,7 +281,7 @@ button:hover {
 
 /* --- PLATFORMS --- */
 .main_subtext {
-    font-size: 1.33vw;
+    font-size: 0.5em;
     width: 60vw;
     text-align: center;
     margin: 0 auto;
@@ -306,7 +290,7 @@ button:hover {
 .popular {
     background-color: #657166;
     color: white;
-    padding-top: 2.67vh;
+    padding-top: 2vh;
     display: flex;
     align-self: center;
     justify-content: center;
@@ -322,7 +306,8 @@ button:hover {
     background-color: white;
     color: black;
     width: 60vw;
-    padding: 2.67vh;
+    padding: 2vh;
+    font-size: 0.5em;
 }
 
 .plats_table a {
@@ -333,7 +318,7 @@ button:hover {
 .plats_table td {
     width: 20vw;
     text-align: center;
-    border: 0.067vw solid black;
+    border: 0.1vw solid black;
     padding: 1.5vh;
     border-collapse: collapse;
 }
@@ -343,11 +328,11 @@ button:hover {
 }
 
 .subtitle {
-    font-size: 5.33vw;
+    font-size: 0.7em;
     width: 40%;
     text-align: center;
     margin: 0 auto;
-    padding-top: 13.3vh;
+    padding-top: 13vh;
 }
 
 
@@ -367,18 +352,18 @@ button:hover {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding: 2.67vh 13.33vw;
+	padding: 3vh 13vw;
 }
 
 .contact-box{
-	max-width: 94.12vw;
+	max-width: 95vw;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	justify-content: center;
 	align-items: center;
 	text-align: center;
 	background-color: #657166;
-	box-shadow: 0px 0px 1.85vw 0.416vw rgba(0,0,0,0.19);
+	box-shadow: 0px 0px 1.8vw 0.4vw rgba(0,0,0,0.19);
 }
 
 .left{
@@ -391,16 +376,17 @@ button:hover {
 }
 
 .right{
-	padding: 2.08vh 5.33vw;
+	padding: 2vh 5vw;
     background-color: white;
-    margin: 2.67vh;
+    margin: 2vh;
     border-radius: 4vw;
 }
 
 h2{
 	position: relative;
 	padding: 0 0 1.33vh;
-	margin-bottom: 1.33vh;
+	margin-bottom: 1vh;
+    font-size: 1em;
 }
 
 h2:after{
@@ -409,20 +395,20 @@ h2:after{
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
-    height: 0.53vh;
-    width: 5.33vw;
-    border-radius: 2.67vw;
+    height: 1vh;
+    width: 5vw;
+    border-radius: 2vw;
     background-color: #2ecc71;
 }
 
 .field{
 	width: 90%;
-	border: 0.13vw solid rgba(0, 0, 0, 0);
+	border: 0.1vw solid rgba(0, 0, 0, 0);
 	outline: none;
 	background-color: rgba(230, 230, 230, 0.6);
-	padding: 0.67vh 1.33vw;
-	font-size: 1.1vw;
-	margin-bottom: 1.47vh;
+	padding: 0.7vh 1vw;
+	font-size: 0.5em;
+	margin-bottom: 1vh;
 	transition: .3s;
     border-radius: 2vw;
 }
@@ -432,7 +418,7 @@ h2:after{
 }
 
 textarea{
-	min-height: 11.33vh;
+	min-height: 12vh;
 }
 
 .field:focus{
@@ -441,7 +427,7 @@ textarea{
 }
 
 .main_subtitle_1 {
-    font-size: 12.8vw;
+    font-size: 3em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -450,9 +436,37 @@ textarea{
 }
 
 .cont_us {
-    font-size: 4.8vw;
+    font-size: 2em;
 }
 
 .adress {
     color:rgb(184, 255, 255)!important;
+}
+
+#frame {
+    border: 2px solid #6f6f6f;
+    
+    width:100vw; 
+    height: 150px; 
+    float:right; 
+    margin-bottom: 10px; 
+    margin-top: 24px;
+}
+
+@media only screen and (max-width: 600px) {
+    html, body {
+        font-size: 0.5em; 
+        row-gap: 1vw;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .container {
+        flex-direction: column;
+        padding: 2vh 5vw;
+    }
+
+    .cont {
+        width: 50vw;
+    }
 }
